<package>
  <name>b21_teleop</name>
  <version>1.0.1</version>
  <description>Teleop Controller for B21</description>
  <author>David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/b21_teleop</url>
  <!-- <url type="bugtracker"></url> -->

  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>joy</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>joy</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
