<package>
  <name>ptu46</name>
  <version>1.0.0</version>
  <description>Driver for the Directed Perception ptu46 pan/tilt driver, forked from player</description>
  <!-- <maintainer>Erik Karulf</maintainer> -->
  <!-- <maintainer>David V. Lu!!</maintainer> -->

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/ptu46</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Erik Karulf</author>
  <author>David V. Lu!!</author>

  <!-- <build_depend>tf</build_depend> -->
  <!-- <build_depend>sensor_msgs</build_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>actionlib</build_depend> -->
  <!-- <build_depend>ptu_control</build_depend> -->
  <!-- <build_depend>diagnostic_updater</build_depend> -->
  <!-- <run_depend>tf</run_depend> -->
  <!-- <run_depend>sensor_msgs</run_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>actionlib</run_depend> -->
  <!-- <run_depend>ptu_control</run_depend> -->
  <!-- <run_depend>diagnostic_updater</run_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>ptu_control</test_depend> -->
  <!-- <test_depend>diagnostic_updater</test_depend> -->

  <export>

  </export>
</package>