<package>
  <name>rflex</name>
  <version>1.0.0</version>
  <description>ROS adaptations of the RFLEX driver.</description>
  <!-- <maintainer>David V. Lu!!</maintainer> -->
  <!-- <maintainer>Mikhail Medvedev</maintainer> -->

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/rflex</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David V. Lu!!</author>
  <author>Mikhail Medvedev</author>

  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <build_depend>sensor_msgs</build_depend> -->
  <!-- <build_depend>geometry_msgs</build_depend> -->
  <!-- <build_depend>nav_msgs</build_depend> -->
  <!-- <build_depend>tf</build_depend> -->
  <!-- <build_depend>angles</build_depend> -->
  <!-- <build_depend>dynamic_reconfigure</build_depend> -->
  <!-- <build_depend>diagnostic_updater</build_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->
  <!-- <run_depend>sensor_msgs</run_depend> -->
  <!-- <run_depend>geometry_msgs</run_depend> -->
  <!-- <run_depend>nav_msgs</run_depend> -->
  <!-- <run_depend>tf</run_depend> -->
  <!-- <run_depend>angles</run_depend> -->
  <!-- <run_depend>dynamic_reconfigure</run_depend> -->
  <!-- <run_depend>diagnostic_updater</run_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>angles</test_depend> -->
  <!-- <test_depend>dynamic_reconfigure</test_depend> -->
  <!-- <test_depend>diagnostic_updater</test_depend> -->

  <export>

  </export>
</package>