<package>
  <name>rflex_dashboard</name>
  <version>1.0.0</version>
  <description>B21 Dashboard using the generic dashboard interface</description>
  <!-- <maintainer>David V. Lu!!</maintainer> -->

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rflex_dashboard</url>
  <!-- <url type="bugtracker"></url> -->

  <author>David V. Lu!!</author>

  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>generic_dashboard</build_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>generic_dashboard</run_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>generic_dashboard</test_depend> -->

  <export>

  </export>
</package>