<package>
  <name>rflex_gui</name>
  <version>1.0.0</version>
  <description>rflex_gui</description>
  <author>David V. Lu!!</author>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rflex_gui</url>
  <!-- <url type="bugtracker"></url> -->

  <!-- <build_depend>rospy</build_depend> -->
  <!-- <build_depend>std_msgs</build_depend> -->
  <!-- <run_depend>rospy</run_depend> -->
  <!-- <run_depend>std_msgs</run_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

  <export>

  </export>
</package>
